tests/compile_fail/borrow/unit.rs
#[derive(derive_more::Borrow)]
struct Foo;

fn main() {}
